	* Autoidentify BUC of products from BUC identified item generators (from UnNetHackPlus)
	* Sokoban prizes are never cursed or have negative enchantment
	* New experimental extended command: #vanquished. Shows a list of all monsters that
	  have been vanquished during the game.
	* Only the Sanctum and the Astral Plane are unmappable levels
	
	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - deep orcs

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	  - Automatically ask whether to unlock when #looting a locked container
	      and carrying an unlocking tool (from UnNetHackPlus)

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).